# saltseer

./: .gitignore  Makefile  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml
docker/: docker-compose.yml
dummy_data/: db_reachability.json  http_requests.json  master_reachability.json  os_data.json  salt_jobs.json
src/: .env.example
src/main/: asgi.py  urls.py  views.py
src/main/settings/: __init__.py  base.py  dev.py  prod.py  test.py
src/main/templates/: base.html  dashboard.html  header.html  reports.html  sidebar.html  sidebar_offcanvas.html
src/static/css/: style.css  style.css.map
src/static/js/dashboard/: config.js  main.js
src/static/js/dashboard/charts/: http.js  jobs.js  os.js  status.js
src/static/scss/: _custom.scss  _variables.scss  style.scss
src/users/: admin.py  models.py
src/users/migrations/: 0001_initial.py
