[project]
name = "saltseer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.6",
    "django-debug-toolbar>=6.0.0",
    "django-extensions>=4.1",
    "psycopg[binary]>=3.2.10",
    "python-dotenv>=1.1.1",
]
